Renamed the program in the README file.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-AN!CWM - Cluster Web Manager
+AN!CDB - Cluster Dashboard
 
 !!! THIS PROGRAM IS NOT READY FOR USE IN ANY WAY, SHAPE OR FORM!
 !!! If you use this before this warning is removed, you will have a bad time.
