Added Screen Shot section to the README.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/README
+++ b/README
@@ -16,6 +16,11 @@ organizations with little to no in-house IT staff.
  b. VM provisioning and removal
  c. Media and resource management for existing VMs
 
+
+Screenshots
+==============================================
+- http://imgur.com/a/YPfZu
+
  
 Cluster and VM management
 ==============================================
