Updated README to remove the 'pre-release' status.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Please note: This is a pre-release program. It may not work or may break in
-             unpredictable and damaging ways.
+Please note: This is a Beta release. It is believed to be stable and ready for
+             use, but bugs may exist. Please test before using in production.
 
 
   This program is a "Cluster Dashboard" designed for simple management of
