Last commit before tagging v1.0.0. Added version to README and footer().
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+AN!CDB                                                                  v1.0.0
 
   This program is a "Cluster Dashboard" designed for simple management of
 AN!Clusters[1]. It is a simple, web-based application designed to be browser
@@ -111,3 +112,4 @@ domains to the preferred host for a given VM.
 ==============================================
 
 1. - https://alteeve.ca/w/AN!Cluster_Tutorial_2
+
