NOTE: This is not production ready. It has all the major work done, but still needs a lot of testing. v1.0.3 should still be used in production.
Fixed AN!MC, which didn't work at all after the ssh overhauld. Fixed a bug parsing the LVM data. Increased the apache Timeout to a rather high number. Fixed a few small text layout things.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,6 +22,9 @@ v1.0.4 - <in-progress>
   be used.
 - Log data is flushed to disk before exiting record().
 - Changed the 'lvcreate' calls to use Gibibytes instead of Megabytes.
+- Switch an-cm to use the common an-cdb.log file.
+- Bumped up the apache Timeout to a rather high number to prevent sessions
+  closing during large uploads.
 
 
 v1.0.3 - 2014-03-26
