NOTE: This is not production ready. It has all the major work done, but still needs a lot of testing. v1.0.3 should still be used in production.
This commit is the first one that appears to properly write out the config files with the new global and per-Anvil! configuration pages. A lot of testing is still needed, but barring another hefty oversight, I think we're close to the next release.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,9 @@ v1.0.4 - <in-progress>
 - Added new variable for 'cluster::X::root_pw' if the root password is
   different from the ricci password. When not defined, the ricci password will
   be used.
+- Changed the WebUI configuration to now uses separate pages for configuring a
+  given Anvil!. Added support for per-anvil! overrides of global email values,
+  though support for this has not yet been added to the alert monitor.
 - Log data is flushed to disk before exiting record().
 - Changed the 'lvcreate' calls to use Gibibytes instead of Megabytes.
 - Switch an-cm to use the common an-cdb.log file.
