NOTE: This is not production ready. It has all the major work done, but still needs a lot of testing. v1.0.3 should still be used in production.
Fixed a handful of bugs related to parsing output from the new SSH call method. Cleaned up the display of DRBD data to show the resync percentage complete on an Inconsistent DRBD resource and cleaned up styling of DRBD 'Connection' states.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -47,6 +47,10 @@ v1.0.4 - <in-progress>
   number of GiB, 3 currently, the modulous is calculated on the available RAM,
   and then the available RAM is calculated as
   (total ram - modulous - reserved).
+- When a node's DRBD disk state is 'Inconsistent' and the resync percentage was
+  read successfully, the percentage complete is shown.
+- Trying to upload a file without defining a file now throws a proper error
+  message.
 
 
 v1.0.3 - 2014-03-26
