Fixed a bug with generating the guacamole URL. Cleaned up the display of BBU information on LSI RAID controllers using Supercaps instead of traditional batteries."
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Change log;
 
+v1.1.1 - <in-progress>
+- 
+
+
 v1.1.0 - 2014-05-04
 - NOTE: This is a major release. The instructions below should allow for an
         in-place update, but a reinstall is recommended.
