--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 Change log;
 
+v1.1.3 - 2014-05-25
+- Added support for backing up and restoring the Striker configuration.
+- Fixed the back and refresh buttons in the management pages.
+- Moved the configuration 'Save' and 'Push/Backup' buttons further apart to
+  reduce the change of accidentally clicking the wrong button.
+  
+
 v1.1.2 - 2014-05-23
 - Added 'Test::Harness' to the installers.
 - Fixed a text substitution error on the header box when inserting media into
