--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 Change log;
 
+v1.1.4 - 2014-05-27
+- Added the 'gather-system-info' (and associated setuid script).
+- Fixed a bug with saving the guacamole port definition.
+
+
 v1.1.3 - 2014-05-25
 - Added support for backing up and restoring the Striker configuration.
 - Fixed the back and refresh buttons in the management pages.
