THIS COMMIT IS BROKEN!
Ok, so not so much broken as only half-done, but I haven't checked in for quite some time.

This check-in covers all <a ...> and <img ...> based buttons being now skinable. It also has the start of the media library becoming translatable and skinnable. It's not done. No sir, not at all.

Also, there is a known issue with guacamole 0.9.2 (https://glyptodon.org/jira/browse/GUAC-789) that seems to effect us. So that's broken, too.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,9 @@ v1.1.5 - <in progress>
   (as per: https://bugzilla.redhat.com/show_bug.cgi?id=1079032)
 - Removed the confirmation requirements for several fairly-safe commands, line
   powering on nodes, booting servers, etc.
+- Updated the IPMI scanner code to redirect sensor loss/restore messages to a
+  now-smarter debug email address.
+- Made all buttons and images come from skins
 
 
 v1.1.4 - 2014-05-27
