--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,9 +20,9 @@ v1.1.5 - <in progress>
 - Made the Media Library skinable and translatable, finally.
 - Added 'id="..."' to all links, input form fields and images.
 - Changed 'an-cluster-setup.sh' to no longer disable iptables or selinux.
-- Redid the Node Controls table to be a single template section instead of many
-  independent template segments.
-
+- Redid the entire main page to return each panel as a completed template chunk
+  which is then rendered at once on a final parent template.
+  
 
 v1.1.4 - 2014-05-27
 - Added the 'gather-system-info' (and associated setuid script).
