This fixes some of the expected selinux issues.
It also fixes a typo in the cache directory. Updated the installer to record the email values passed by the -e and -m switches in an.conf. All references to SMTP timeouts have been removed and work has started on an-cm's new mail system using postfix.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -35,6 +35,7 @@ v1.1.5 - <in progress>
   can be read, leading to "Undefined replacement key" alerts.
 - Created the 'striker-install' script to replace the old 'an-cdb-install.sh'
   script.
+- Removed all references to SMTP timeout.
 
 
 v1.1.4 - 2014-05-27
