More patches and cleanup.
* Cleaned up how the Media Library HTML renders when uploading a file or pushing a config to an Anvil! when known_hosts has to be populated.
* Fixed the alert system to send emails when a server is deleted.
* Added a "Back" button to the Media Library's home page to return to the being-managed Anvil!
* Updated the new installer to set the 'root' password to the same password set for the Striker htpasswd user.
* Updated the alert system to not send emails when the BBU hold-up hours increase.

v1.1.5 gets closer and closer!

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -36,6 +36,7 @@ v1.1.5 - <in progress>
 - Created the 'striker-install' script to replace the old 'an-cdb-install.sh'
   script.
 - Removed all references to SMTP timeout.
+- Added a "Back" button to the main Media Library page.
 
 
 v1.1.4 - 2014-05-27
