Small commit to fix a harmless error message in the striker-installer script.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Change log;
 
+v1.2.0 - In progress
+- 
+
+
 v1.1.5 - 2014-08-31
 - Fixed some undefined replacement string errors in the server details entry
   for servers not yet added to the Anvil!.
