Started work on a new manifest creation function. This will eventually generate an XML file that will be passed to a script that runs on freshly installed nodes and configures them for use as Anvil! nodes based on the manifest data and the specified node.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Change log;
 
+v1.1.7 - in-progress
+- Cleaned up the configuration page to make it much more usable.
+
+
 v1.1.6 - 2014-09-23
 - Critical Update!
 - Fixed a bug where, if a server's XML definition file is set to use 'spice'
