ScanCore is not working yet.
* In this commit, scan-clustat has been updated to use 'clustat_uuid' instead of 'clustat_id', and to help with that, the AN::Tools::Get->uuid() method was created.
* The Insertion of new records into scan-clustat works, but updates have not been tested (either after changes or when resync'ing a DB). Took more than expected to get this far.
* Made scan-core a little smarter on start up in finding it's current path and using that to find required external files like strings.
* Updated scan-clustat to use the new DB resync system, but totally untested atm.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -356,7 +356,7 @@ The file mentioned in the error failed to open for writing. The error returned b
 
 =head2 C<30>
 
-free
+A system call was attempted which failed. The details of the error will be in the output message.
 
 =head2 C<31>
 
